--- a/estilos.css
+++ b/estilos.css
@@ -17,3 +17,40 @@ h1 {
   background-color: rgba(254, 191, 115, 0.868);
   border-radius: 10px;
 }
+
+#contenido {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+input[type="text"] {
+  padding: 5px 5px;
+  border: 1px solid #cccccc0c;
+  border-radius: 6px;
+  width: 250px;
+  font-size: 16px;
+}
+
+button {
+  padding: 6px 12px;
+  margin-left: 5px;
+  background-color: #5757575c;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: #ffffff;
+}
+
+#bandera {
+  width: 25vw;
+  height: 25vh;
+  border-radius: 10px;
+}
+
+#mapa {
+  width: 26vw;
+  height: 30vh;
+  border-radius: 10px;
+}
